                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2020-09-13
 * Markdown editor goes into readonly mode while saving.
 * Markdwon editor scrolls to same line number + 5 after saving.
 * Fixed bug in parsing MySQL date times in tgc.vue.js as it was not using UTC.

2020-09-10
 * Fix static id bug by wrapping id default in function.

2020-09-05
 * Added <markdown-editor> component to wing.vue.js.
 * Added <date-time> component to wing.vue.js.

2020-09-02
 * Added 'WingBot' to user agent string of ContenFilter.

2020-09-01
 * Web Filtered Fields should not allow null.

2020-08-29
 * Refactored the <toggle> component.
 * Added wing.generate_id().

2020-08-26
 * Modernized the template_class templates.

2020-08-21
 * Added toggle switch component to wing.vue.js.
 * JSON fields now assume a non JSON string is a single element array as it's more useful than assuming it's an error.
 * Field validation now allows for an array reference as a valid value for enumeration comparisons.

2020-08-19
 * Added wing.format_field_label() for generating make shift field labels on the fly.
 * Added search_params to wing.vue.js wing.object_list.all() and wing.object_list.search().
 * Added v-autosavedelay and v-autosavefield options for the v-autosave directive in wing.vue.js.
 * Added <wing-options-label> component to wing.vue.js.

2020-08-19
 * Added wing.natural_sort() utility for sorting lists so that numbers appear naturally in alpha-numeric lists.

2020-08-14
 * Updated bootstrap-vue to 2.16.0.
 * Updated vue to 2.6.7.
 * Updated bootstrap to 4.5.2.
 * Added wing-pagination component to wing.vue.js.

2020-07-13
 * Fixed bug in Wing::Util::is_in() where it always returned true.

2020-07-10