@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2020-09-16
+ * Minor change to Wing::DB::Result->check_privilege_method so that it returns a 1 instead of the result of the called method if it passes it's checks. This way you can use Wing::Role::Result::PrivilegeField->verify_is_ methods with it.
+
 2020-09-13
  * Markdown editor goes into readonly mode while saving.
  * Markdwon editor scrolls to same line number + 5 after saving.
